--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
+
+ <!DOCTYPE html>
 <html>
+  <head>
+  </head>
   <body>
-<a src"https://treedots.github.io/p5JS/AsciiPlains">AsciiPlains</a><br>
+    <main>
+      <a src"https://treedots.github.io/p5JS/AsciiPlains">AsciiPlains</a><br>
 <a src"https://treedots.github.io/p5JS/Petscii">Petscii</a><br>
 <a src"https://treedots.github.io/p5JS/Room Placement">Room Placement</a><br>
 <a src"https://treedots.github.io/p5JS/SpriteLab">SpriteLab</a><br>
@@ -8,5 +13,6 @@
 <a src"https://treedots.github.io/p5JS/cellular_automata">Cellular Automata</a><br>
 <a src"https://treedots.github.io/p5JS/noise">Noise/a><br>
 <a src"https://treedots.github.io/p5JS/waveart">Wave Art</a><br>
+    </main>
   </body>
-  </html>
+</html>
