--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <a src"https://treedots.github.io/p5JS/SpriteLab">SpriteLab</a><br>
 <a src"https://treedots.github.io/p5JS/cave gen">Cave Gen</a><br>
 <a src"https://treedots.github.io/p5JS/cellular_automata">Cellular Automata</a><br>
-<a src"https://treedots.github.io/p5JS/noise">Noise/a><br>
+<a src"https://treedots.github.io/p5JS/noise">Noise</a><br>
 <a src"https://treedots.github.io/p5JS/waveart">Wave Art</a><br>
     </main>
   </body>
