--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   </head>
   <body>
     <main>
-      <a src"https://treedots.github.io/p5JS/AsciiPlains">AsciiPlains</a><br>
-<a src"https://treedots.github.io/p5JS/Petscii">Petscii</a><br>
-<a src"https://treedots.github.io/p5JS/Room Placement">Room Placement</a><br>
-<a src"https://treedots.github.io/p5JS/SpriteLab">SpriteLab</a><br>
-<a src"https://treedots.github.io/p5JS/cave gen">Cave Gen</a><br>
-<a src"https://treedots.github.io/p5JS/cellular_automata">Cellular Automata</a><br>
-<a src"https://treedots.github.io/p5JS/noise">Noise</a><br>
-<a src"https://treedots.github.io/p5JS/waveart">Wave Art</a><br>
+      <a href="https://treedots.github.io/p5JS/AsciiPlains">AsciiPlains</a><br>
+<a href="https://treedots.github.io/p5JS/Petscii">Petscii</a><br>
+<a href="https://treedots.github.io/p5JS/Room Placement">Room Placement</a><br>
+<a href="https://treedots.github.io/p5JS/SpriteLab">SpriteLab</a><br>
+<a href="https://treedots.github.io/p5JS/cave gen">Cave Gen</a><br>
+<a href="https://treedots.github.io/p5JS/cellular_automata">Cellular Automata</a><br>
+<a href="https://treedots.github.io/p5JS/noise">Noise</a><br>
+<a href="https://treedots.github.io/p5JS/waveart">Wave Art</a><br>
     </main>
   </body>
 </html>
